# trinci-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  marco.db  msgpack.sh  start.sh
src/: batch.rs  cheats.rs  cheats_advanced_asset.rs  common.rs  config.rs  console.rs  impexp.rs  main.rs  stress.rs  utils.rs
src/cheats/: advanced_asset.rs  commons.rs  mod.rs
src/client/: bridge.rs  channel.rs  file.rs  http.rs  mod.rs  stdio.rs
txs/bootstrap/: README.md  bootstrap.toml
txs/nightly/: bootstrap.toml  register-contracts.toml
txs/skynet/: bootstrap.toml  register-basic-vote.toml  register-contracts.toml  register-vote.toml
txs/temp/: bootstrap.toml
txs/testnet/: bootstrap.toml  register-contracts.toml
