[package]
name = "trinci-cli"
version = "0.2.5"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2021"

[dependencies]
#RESTORE BEFORE MERGE IN MASTER trinci-core = { git = "https://github.com/affidaty-blockchain/trinci-core", default-features = false }
trinci-core = { path = "../trinci-core", default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.64"
rmp-serde = "0.15.5"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
hex = "0.4.3"
rand = "0.8.4"
clap = "2.33.3"
ureq = { version = "2.1.1", default-features = false }
lazy_static = "1.4.0"
toml = "0.5.8"
rustyline = "8.2.0"
indicatif = "0.16.2"
# read txs from directory
glob = "0.3.0"
