[package]
name = "trinci-cli"
version = "0.2.8"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2021"

[dependencies]
trinci-core = { git = "https://github.com/affidaty-blockchain/trinci-core", default-features = false }

serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
serde_json = "1.0.79"
rmp-serde = "1.0.0"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
hex = "0.4.3"
rand = "0.8.4"
clap = { version = "3.1.0", features = ["cargo"] }
ureq = { version = "2.4.0", default-features = false, features = ["tls"] }
lazy_static = "1.4.0"
toml = "0.5.8"
rustyline = "9.1.2"
indicatif = "0.16.2"
# read txs from directory
glob = "0.3.0"
